# stella_nav

./: .gitignore  LICENSE  README.md
docker/: build.sh  run.sh
docker/full/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/home/: .bashrc
docker/minimal/: Dockerfile  docker-compose.yml  entrypoint.sh
stella_nav/: CMakeLists.txt  package.xml
stella_nav_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stella_nav_core/src/stella_nav_core/: auto_goal_setter_node.py  geometry_utils.py  goal.py  navigation.py  state_machine.py  stella_nav_node.py
stella_nav_core/src/stella_nav_core/config/: __init__.py  cost_config.py  motion_config.py
stella_nav_costmap/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stella_nav_costmap/src/stella_nav_costmap/: gridmap2d.py  setup.py
stella_nav_costmap/src/stella_nav_costmap/optimized/: inflation.pyx
stella_nav_costmap/src/stella_nav_costmap/unoptimized/: inflation.py
stella_nav_handler/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stella_nav_handler/src/stella_nav_handler/: __init__.py  common_msg_handler.py  goal_handler.py  gridmap2d_handler.py  plan_handler.py
stella_nav_launch/: CMakeLists.txt  package.xml
stella_nav_launch/launch/: localization.launch  navigation.launch  navigation_only.launch  rviz.launch  scan_to_cloud.launch  simulation.launch  simulation.launch.py  tf.launch  tf.launch.py  world.launch  world.launch.py
stella_nav_launch/samples/: config.yaml.sample  goals.yaml.sample  navigation.rviz.sample
stella_nav_listener/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stella_nav_listener/src/stella_nav_listener/: __init__.py  current_goal_listener.py  force_recovery_listener.py  goal_listener.py  goal_topic_listener.py  gridmap2d_listener.py  odom_listener.py  plan_listener.py  pointcloud_listener.py  pose_update_listener.py  state_machine_listener.py  trigger_listener.py
stella_nav_listener/src/stella_nav_listener/helper/: pointcloud_parser.py
stella_nav_observer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stella_nav_observer/src/stella_nav_observer/: __init__.py  goal_observer.py  map_observer.py  observer.py  odom_observer.py  periodic_observer.py  pointcloud_observer.py  pose_observer.py  recognizer_observer.py  topic_observer.py  trigger_observer.py
stella_nav_planning/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stella_nav_planning/src/stella_nav_planning/global_planner/: __init__.py  carrot_planner.py  ompl_planner.py  ompl_planner_impl.py  test_planning.py
stella_nav_planning/src/stella_nav_planning/global_planner/helper/: __init__.py  passable_checker.py  stuck_checker.py  waypoint_generator.py
stella_nav_planning/src/stella_nav_planning/global_planner/optimized/: build_module.sh  ompl.pxd  ompl_planner_impl.pyx  ompl_wrapper.pyx  setup.py  test_planning.pyx
stella_nav_planning/src/stella_nav_planning/local_planner/: __init__.py  dwa_planner.py  stop_planner.py
stella_nav_recognizer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stella_nav_recognizer/src/stella_nav_recognizer/: __init__.py  distance_checker.py  pass_checker.py  recognizer.py  stop_recognizer.py  time_checker.py
